# cifar10-production-pipeline

./: .gitignore  .gitlab-ci.yml  Containerfile  README.md  eda.ipynb  pyproject.toml  requirements.txt  run.sh
conf/: config.yaml  freezing.yaml  optuna.yaml  transforms.yaml
conf/model_cfg/: efficientnet.yaml  resnet.yaml  vit.yaml
src/: __init__.py  advanced_evaluation.py  augmentations.py  data_loader.py  eda.py  enums.py  evaluate.py  general_utils.py  layer_freezing.py  model.py  optuna_sweep.py  pipeline.py  preprocessing.py  train.py  transforms.py  validation.py
src/networks/: __init__.py  base_builder.py  efficientnet.py  resnet.py  vit.py
